fixed spacing bugs

--- a/src/scss/_oldstyles.scss
+++ b/src/scss/_oldstyles.scss
@@ -36,7 +36,7 @@ $stonybrook-color: #990000;
 	border-style: solid;
 	border-width: 0px;
 	margin-right: 0.5em;
-	width: 3em;
+	width: 3.2em;
 	background-color: #ededed;
 	border-radius: 50%;
 	cursor: pointer;
